# includes

./: .gitignore  LICENSE  README.md  Specification.md  ci.sh  includes.1  meson.build
completions/: includes.bash
debian/: changelog  control  copyright  install  rules
include/: includes.h
src/: config.c  config.h  file_loader.c  file_loader.h  include_collect.c  include_collect.h  lib.c  macro.c  macro.h  main.c  pp_cond.c  pp_cond.h  pp_expr.c  pp_expr.h  pp_lexer.c  pp_lexer.h  pp_parse.c  pp_parse.h  toolkit.c  toolkit.h
src/util/: _logging.h  logger.c  logger.h  logging-example.c  logging.c  logging.h
tests/: run_tests.sh
tests/fixture/: circ_a.h  circ_root.c  empty.c  if_endif.c  level1.h  level2.h  toolkit_ifdef.c  unmatched_endif.c
